Revise 'Dear Failure' post with updates and references
Updated the post date and modified image source and captions. Added references for co-op, Aesop's Fables, and Boondocks.

--- a/_posts/2026-01-05-failure.html
+++ b/_posts/2026-01-05-failure.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Dear Failure
-date: 2026-01-04 20:44:13 +0200
+date: 2026-01-05 20:44:13 +0200
 permalink: /dear-failure/
 summary: "My experiences on failure as an inexperienced teenager"
 ---
@@ -14,16 +14,12 @@ summary: "My experiences on failure as an inexperienced teenager"
   The problem? I fully expected to pass and skip merrily on with my life. The bigger problem? It was a prerequisite for half my future degree—a course only offered once a year, in Winter Term 1.
 </p>
 
-<img src="/assets/imgs/cyclone.png.PNG" alt="Feeling lost" style="width: 100%; max-width: 600px;" />
-
-<figcaption>
-  How it feels when your academic plans spiral out of control.
-</figcaption>
-
-<br />
+<img src="https://raw.githubusercontent.com/ansonnchan/chanblogs/main/assets/imgs/cyclone.png" 
+     alt="Feeling lost" 
+     style="width: 100%; max-width: 600px; height: auto; display: block; margin: 2rem auto;" />
 
 <p>
-  If you're in engineering, or any program for that matter, you know what this means; graduation, most likely delayed by a year. When you factor in co-op <sup>1</sup>, I could be here for over <em>six years</em>. By then, who knows what the job market looks like, especially in AI and machine learning (the fields I'm hoping to work in).
+  If you're in engineering, or any program for that matter, you know what this means; graduation, most likely delayed by a year. When you factor in co-op <sup><a href="#coop">1</a></sup>, I could be here for over <em>six years</em>. By then, who knows what the job market looks like, especially in AI and machine learning (the fields I'm hoping to work in).
 </p>
 
 <p>
@@ -45,7 +41,7 @@ summary: "My experiences on failure as an inexperienced teenager"
 </div>
 
 <p>
-  You might be thinking—<em>wait, you expected to pass but now say you'd fail?</em> And you're absolutely right. Turns out, the "knowledge" I was so proud of retaining was just memorization. I didn't want understanding; I wanted the grade. And now? I have neither (this feels like a story straight out of Aesop's Fables <sup>2</sup>).
+  You might be thinking—<em>wait, you expected to pass but now say you'd fail?</em> And you're absolutely right. Turns out, the "knowledge" I was so proud of retaining was just memorization. I didn't want understanding; I wanted the grade. And now? I have neither (this feels like a story straight out of Aesop's Fables <sup><a href="#aesop">2</a></sup>).
 </p>
 
 <p>
@@ -57,7 +53,7 @@ summary: "My experiences on failure as an inexperienced teenager"
 </p>
 
 <p>
-  But with 102% certainty and a 2% margin of error <sup>2</sup>, you're not going to catch me doing anything hardware related in the future.
+  But with 102% certainty and a 2% margin of error <sup><a href="#boondocks">3</a></sup>, you're not going to catch me doing anything hardware related in the future.
 </p>
 
 <hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
@@ -76,10 +72,14 @@ summary: "My experiences on failure as an inexperienced teenager"
   It won't even register as a rounding error. Perhaps failures are the universe's awkward and annoying way of moving you forward. Sometimes, you have to fail a prerequisite to learn the real lesson.
 </p>
 
-<br>
-<hr>
-<p><sup>1</sup></p> Co-op: UBC's program for students to gain work experience (similar to indeed). CPEN students typically take 5 co-op work terms with each co-op work team lasting 4 months.
-<p><sup>2</sup></p> Aesop's Fables are a must read; essentially a collection of short stories meant to teach a clear, moral lesson.
-<p><sup>3</sup></p> Boondocks reference. Shoutout Uncle Ruckus
 
+<div style="height: 1px; background: #eee; margin: 40px 0;"></div>
+
+<div style="background: #f9f9f9; padding: 20px; border-radius: 8px; margin-top: 20px;">
+  <p id="coop"><sup>1</sup> <strong>Co-op:</strong> UBC's program for students to gain work experience (similar to internships). CPEN students typically take 5 co-op work terms with each co-op work term lasting 4 months.</p>
+  
+  <p id="aesop"><sup>2</sup> <strong>Aesop's Fables:</strong> A collection of short stories meant to teach clear, moral lessons. If you haven't read them, you should—they're surprisingly relevant centuries later.</p>
+  
+  <p id="boondocks"><sup>3</sup> <strong>Boondocks reference:</strong> Shoutout Uncle Ruckus </p>
+</div>
 
