Refactor HTML for improved readability

--- a/_posts/2026-01-05-failure.html
+++ b/_posts/2026-01-05-failure.html
@@ -7,7 +7,7 @@ summary: "My experiences on failure as an inexperienced teenager"
 ---
 
 <p>
-  Starting a blog with this feels a little on-the-nose, doesn't it? A bit depressing. But yesterday, I got a blow I never saw coming. I failed a course.
+  Starting a blog on this feels a little on-the-nose, doesn't it? A bit depressing. But yesterday, I got a blow I never saw coming. I failed a course.
 </p>
 
 <p>
@@ -76,10 +76,10 @@ summary: "My experiences on failure as an inexperienced teenager"
 <div style="height: 1px; background: #eee; margin: 40px 0;"></div>
 
 <div style="background: #f9f9f9; padding: 20px; border-radius: 8px; margin-top: 20px;">
-  <p id="coop"><sup>1</sup> <strong>Co-op:</strong> UBC's program for students to gain work experience (similar to internships). CPEN students typically take 5 co-op work terms with each co-op work term lasting 4 months.</p>
+  <p id="coop"><sup>1</sup> Co-op - UBC's program for students to gain work experience (similar to internships). CPEN students typically take 5 co-op work terms with each co-op work term lasting 4 months.</p>
   
-  <p id="aesop"><sup>2</sup> <strong>Aesop's Fables:</strong> A collection of short stories meant to teach clear, moral lessons. If you haven't read them, you should—they're surprisingly relevant centuries later.</p>
+  <p id="aesop"><sup>2</sup> Aesop's Fables -  A collection of short stories meant to teach clear, moral lessons. If you haven't read them, you should—they're surprisingly relevant centuries later.</p>
   
-  <p id="boondocks"><sup>3</sup> <strong>Boondocks reference:</strong> Shoutout Uncle Ruckus </p>
+  <p id="boondocks"><sup>3</sup> Boondocks reference. Shoutout Uncle Ruckus </p>
 </div>
 
