--- a/_posts/2026-01-05-failure.html
+++ b/_posts/2026-01-05-failure.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Dear Failure
+title: 😔 Dear Failure
 date: 2026-01-05 20:44:13 +0200
 permalink: /dear-failure/
 description: "My experiences on failure as an inexperienced teenager"
