minor image fixes

--- a/_posts/2026-01-19-ML_CSvsCPEN.html
+++ b/_posts/2026-01-19-ML_CSvsCPEN.html
@@ -23,7 +23,7 @@ description: "How my journey into Machine Learning blurred the line between Comp
 </p>
 
 <img
-  src="https://raw.githubusercontent.com/ansonnchan/chanblogs/main/assets/imgs/co-op.png"
+  src="https://raw.githubusercontent.com/ansonnchan/chanblogs/main/assets/imgs/IMG_5209.jpg"
   alt="CPEN Co-op Postings"
   style="width: 100%; max-width: 450px; border-radius: 12px; display: block; margin: 2rem auto; border: 1px solid #ddd;"
 />
