--- a/_posts/2026-01-19-ML_CSvsCPEN.html
+++ b/_posts/2026-01-19-ML_CSvsCPEN.html
@@ -1,124 +1,154 @@
 ---
 layout: post
-title: "CS vs CPEN Through the Lens of Machine Learning"
-date: 2026-01-19
-permalink: /cs-vs-cpen-ubc-ML/
-description: "How my journey into Machine Learning blurred the line between Computer Science and Computer Engineering at UBC."
+title: "UBC CS vs. CPEN: The Engineering Student's Identity Crisis"
+date: 2026-01-20
+permalink: /cs-vs-cpen-ubc-engineering-choice/
+description: "Choosing between Computer Science and Computer Engineering at UBC isn't about software vs. hardware. Here's what actually matters."
 ---
+
 <hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
 
-<h2>🤖 CS vs CPEN: My ML-Induced Identity Crisis</h2>
+<h2>🤖 The Identity Crisis Begins</h2>
 
-<p>
-  Back when I was applying to UBC — sometime around the Industrial Revolution era, apparently — I debated heavily whether to go CS or CPEN. It felt like picking the side of the force: software Jedi or hardware Sith 
-<div style="background: #fff4e5; padding: 0.8rem 1rem; border-left: 4px solid #f39c12; border-radius: 6px; margin: 0.5rem 0 1rem 0;">
-  <strong>💡 Side Note:</strong> Does Gen Alpha even know what Star Wars is? Or am I too old? Soon, even kids born in the 2000s will be called “uncs.”
+<p>Here's the conversation I had with myself circa 2023:</p>
+
+<blockquote style="background: #f9f9f9; padding: 1.5rem; border-left: 4px solid #ddd; margin: 1.5rem 0; font-style: italic;">
+<p><strong>Me:</strong> <em>scrolling through Reddit at 2 AM</em> "Should I do CS or CPEN at UBC?"</p>
+<p><strong>Every single source:</strong> "CS is software. CPEN is hardware. Pick based on that."</p>
+<p><strong>Also every single source:</strong> <em>12-year-old forum posts, questionable YouTube advice, that one uncle who 'works in tech'</em></p>
+</blockquote>
+
+<div style="background: #fff4e5; padding: 0.8rem 1rem; border-left: 4px solid #f39c12; border-radius: 6px; margin: 1.5rem 0;">
+<strong>💡 The Problem:</strong> This advice is like telling someone to pick a major based on whether they prefer typing or clicking a mouse. It's technically not wrong, but it misses everything that actually matters.
 </div>
 
-</p>
+<p>Fast forward to 2026, and I'm a CPEN student whose end goal is Machine Learning — about as "software" as it gets. So what happened? And more importantly, what does this mean for you trying to decide right now?</p>
 
-<p>
-  To be honest, I wasn’t completely sure I even wanted to do Machine Learning or software yet. I’d done well in STEM in high school — especially maths and physics — which, spoiler alert, has <em>zero correlation</em> with surviving university-level STEM. But hey, it made me feel like I had options.
-</p>
+<hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
 
-<p>
-  I seriously considered mechanical engineering (clearly out after the infamous APSC 101 mechanical claw project<sup><a href="#apscclaw">1</a></sup>), and civil engineering (but my parents warned me that civil engineers tend to die of hypothermia and thirst in the field… thanks for the vote of confidence).
-</p>
+<h2>🎯 My Journey: The Accidental Engineer</h2>
 
-<img
-  src="https://raw.githubusercontent.com/ansonnchan/chanblogs/main/assets/imgs/IMG_5209.jpg"
-  alt="CPEN Co-op Postings"
-  style="width: 100%; max-width: 450px; border-radius: 12px; display: block; margin: 2rem auto; border: 1px solid #ddd;"
-/>
-<p>
- Above is the mechanical claw our group made for the first APSC 101 group project. Shout out to my group mates for carrying me. 
-</p>
+<p>Let me be real with you: I had no idea what I was doing. I wrote my first line of code in my senior year of high school:</p>
 
-<p>
-  So, in the end, I went with CPEN. It was the middle ground: enough hardware to keep options open, enough software to eventually do what I wanted — and a solid dose of “let’s see where this actually takes me.”
-</p>
+<pre style="background: #f8f9fa; padding: 1rem; border-radius: 8px; overflow-x: auto; margin: 1.5rem 0; border-left: 4px solid #27ae60;">
+<code>#include &lt;stdio.h&gt;
+int main(void) {
+    printf("Hello, World!");
+    return 0;
+}</code>
+</pre>
 
-<p>
-  Everyone else was giving me the usual advice: <em>CS = software, CPEN = hardware</em>. Simple. Logical. But as it turns out, it’s not that simple. And the further I got into machine learning, the more that line started to blur.
-</p>
-
-<div style="background: #f9f7f1; padding: 1.5rem; border-left: 5px solid #f39c12; border-radius: 8px; margin: 2rem 0;">
-  Modern ML isn’t just “write model, train model, profit.” It’s more like:
-  <ul>
-    <li>Why is my model bottlenecked on memory?</li>
-    <li>Why does it run fine on <code>Colab</code> but crawl on real hardware?</li>
-    <li>Why does moving one <code>tensor</code> suddenly spike GPU utilization to 100%?</li>
-    <li>Why does that one Python typo destroy three hours of training? (RIP)</li>
-  </ul>
-</div>
-
-<p>
-  At this point, you stop arguing about loss functions and start arguing with the machine itself.
-  And that’s where the CS vs CPEN divide starts to feel… artificial.
-</p>
-
-<h3>💻 CS vs CPEN: What They Actually Teach You</h3>
-
-<ul>
-  <li>
-    <strong>CS:</strong> Abstract thinking, algorithms, and “does it work in theory?” You learn to build models, understand convergence, and occasionally cry over NP-complete problems.
-  </li>
-  <li>
-    <strong>CPEN:</strong> Concrete thinking, hardware realities, and “does it actually run?” You wrestle with memory hierarchies, pipelines, GPU clusters, and the terrifying world of system-level debugging.
-  </li>
-</ul>
-
-<p>
-  For ML, both perspectives matter. CS gives you the map; CPEN teaches you to navigate the terrain without burning your laptop.
-</p>
+<p>That was it. No algorithms, no data structures, no clue. Your classic Hello, World! program that every programmer in the world has coded at least once. Had I had more experience with coding and programming in general,
+  perhaps I would have made a different choice but my little experience back then caused me to doubt I would have a career in coding 10, 15 years later.
+  
+  But I liked math, did decently in physics, and everyone said engineering was the "practical" choice. So I chose the Applied Science route.</p>
 
 <div style="background: #eef7f6; padding: 1.5rem; border-left: 5px solid #27ae60; border-radius: 8px; margin: 2rem 0;">
-  Ironically, the deeper I got into ML, the less I cared about labels like “software” or “hardware.” The people doing genuinely interesting ML work aren’t living at either extreme—they’re in the uncomfortable middle: tweaking kernels, optimizing memory, and praying the server doesn’t explode.
+<strong>⚠️ Reality Check:</strong> Doing well in high school STEM has exactly <em>zero</em> correlation with surviving university engineering. It's like being good at Monopoly and thinking you can run a real estate empire.
 </div>
+
+<p>The beauty of UBC Engineering is that first year is general. You get to sample different fields. I considered mechanical (until the APSC 101 claw project<sup><a href="#apscclaw">1</a></sup>), civil (until my parents mentioned "field work in the rain"), and several others.</p>
+
+<img src="https://raw.githubusercontent.com/ansonnchan/chanblogs/main/assets/imgs/IMG_5209.jpg" alt="APSC 101 Mechanical Claw Project" style="width: 100%; max-width: 450px; border-radius: 12px; display: block; margin: 2rem auto; border: 1px solid #ddd;" />
+
+<p style="text-align: center; font-size: 0.9rem; color: #666;">The infamous APSC 101 mechanical claw. Shout out to my group mates who actually knew what they were doing. 🙏</p>
+
+<p>CPEN wasn't even in my top three until APSC 160 — UBC's intro to coding for engineers. Something clicked when I started writing more programs, and eventually my own tic-tac-toe game. It was nothing fancy; no custom GUI, 
+  just the user, the compiler, and the command line interface. But that was the moment: seeing something you coded with nothing but your fingers and keyboard come to life made me realize that maybe this coding thing wasn't so bad after all.</p>
 
 <hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
 
-<h2>🧠 So… Does That Mean CPEN Is “Better” for ML?</h2>
+<h2>💼 The Big Lie: "Hardware" vs "Software" Jobs</h2>
 
-<p>
-  Not really. And also… maybe. And yes, sometimes. (Welcome to engineering logic.)
-</p>
+<p>Here's where things get interesting. I started my first co-op job search this Winter term. Over the course of my brief two weeks and counting job search, I've been browsing the Applied Science Co-op portal, and noticed something funny:</p>
 
-<p>
-  If your goal is ML research, applied ML, or ML-adjacent software roles,
-  <strong>both degrees get you there</strong>. What changes is the <em>lens</em> you develop:
-</p>
+<div style="background: #f0f7ff; padding: 1.5rem; border-left: 5px solid #0055b7; border-radius: 8px; margin: 2rem 0;">
+<strong>💰 The Secret No One Tells You:</strong> Most "Computer Engineering" jobs on the co-op portal are... software roles. Backend, frontend, full-stack, ML — the same positions CS students are fighting for. Hell, even quality assurance and 
+  software testing roles that CS and CPEN students discriminate against are getting competitive. 
+</div>
 
+<img src="https://raw.githubusercontent.com/ansonnchan/chanblogs/main/assets/imgs/co-op.png" alt="CPEN Co-op Postings" style="width: 100%; max-width: 450px; border-radius: 12px; display: block; margin: 2rem auto; border: 1px solid #ddd;" />
+
+<p>Think about it: how many hardware companies are hiring 20-year-olds to design CPUs? Versus how many companies need software developers? The math isn't complicated. </p>
+
+<p><strong>The truth:</strong> Most CPEN graduates end up in software anyway. The degree doesn't lock you into hardware labs — it just gives you a different toolkit.</p>
+
+<hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
+
+<h2>🧠 The Real Difference: How You Learn to Think</h2>
+
+<p>Forget "software vs hardware." The real distinction is in the mindset each program cultivates:</p>
+
+<h3>💻 CS: The Theorist</h3>
 <ul>
-  <li>CS trains you to think in abstractions: models, guarantees, complexity, and sometimes frustration over imaginary errors in Jupyter.</li>
-  <li>CPEN forces you to confront reality: caches, pipelines, instruction sets, and the fact that “just parallelize it” is not a solution.</li>
+<li><strong>Focus:</strong> Algorithms, abstraction, computational theory</li>
+<li><strong>Question:</strong> "Does this solution work in theory?"</li>
+<li><strong>Vibe:</strong> Whiteboard algorithms, big-O notation, occasional existential crisis over NP-complete problems</li>
 </ul>
+
+<h3>🔧 CPEN: The Pragmatist</h3>
+<ul>
+<li><strong>Focus:</strong> Systems, implementation, real-world constraints</li>
+<li><strong>Question:</strong> "Does this actually run on real hardware?"</li>
+<li><strong>Vibe:</strong> Debugging memory leaks at 2 AM, wrestling with System Verilog, that special kind of pain only CPEN 211 graduates understand</li>
+</ul>
+
+<div style="background: #fff4e5; padding: 0.8rem 1rem; border-left: 4px solid #f39c12; border-radius: 6px; margin: 1.5rem 0;">
+<strong>🎯 My Goal:</strong> Machine Learning - Here's the plot twist: both degrees get you there. 
+</div>
+
+<table style="width:100%; border-collapse: collapse; margin: 2rem 0; border: 1px solid #ddd;">
+<thead>
+<tr style="background:#f9f9f9;">
+<th style="border: 1px solid #ddd; padding: 0.8rem; text-align: left;">Feature</th>
+<th style="border: 1px solid #ddd; padding: 0.8rem; text-align: left;">Computer Science (BSc)</th>
+<th style="border: 1px solid #ddd; padding: 0.8rem; text-align: left;">Computer Engineering (BASc)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="border: 1px solid #ddd; padding: 0.8rem;"><strong>Focus</strong></td>
+<td style="border: 1px solid #ddd; padding: 0.8rem;">Algorithms & Theory</td>
+<td style="border: 1px solid #ddd; padding: 0.8rem;">Systems & Implementation</td>
+</tr>
+<tr>
+<td style="border: 1px solid #ddd; padding: 0.8rem;"><strong>The Extra</strong></td>
+<td style="border: 1px solid #ddd; padding: 0.8rem;">More electives, flexibility</td>
+<td style="border: 1px solid #ddd; padding: 0.8rem;">The Iron Ring 💍 + P.Eng status</td>
+</tr>
+<tr>
+<td style="border: 1px solid #ddd; padding: 0.8rem;"><strong>The Pain</strong></td>
+<td style="border: 1px solid #ddd; padding: 0.8rem;">Theory-heavy exams</td>
+<td style="border: 1px solid #ddd; padding: 0.8rem;">CPEN 211 (iykyk)</td>
+</tr>
+
+</tbody>
+</table>
+
+<hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
+
+<h2>🚀 The Verdict: Launchpad, Not a Prison</h2>
+
+<p>Here's what I wish someone had told me:</p>
 
 <div style="background: #eef7f6; padding: 1.5rem; border-left: 5px solid #27ae60; border-radius: 8px; margin: 2rem 0;">
-  Personally, that hardware exposure stopped feeling like a distraction and started feeling like context. Painful context. Occasionally soul-crushing context. But context nonetheless.
+<strong>Your degree is a toolkit, not a life sentence.</strong> CS gives you the theory toolkit. CPEN gives you the systems toolkit. Most jobs need both. More generally, there is no shortage of people who are in careers completely irrelevant to the degree they graduated with. I've seen people go back to university for second degrees in what they're truly passionate about. A degree opens doors, but it's your skills, projects, and adaptability that let you walk through them and thrive in whatever room you choose to enter.
 </div>
 
-<p>
-  In the end, ML made the CS vs CPEN choice feel <strong>less</strong> like a fork in the road and more like choosing which weaknesses you want to patch later — and being okay with it.
-</p>
+
 
 <hr style="margin: 40px 0; border: none; border-top: 1px solid #eee;" />
 
-<h3>📚 Glossary for the Uninitiated</h3>
+<br>
+<hr />
 
 <ul>
-  <li><code>scikit-learn</code>: A Python library for ML; great for prototyping but hides the hardware details.</li>
-  <li><code>Colab</code>: Google’s free Jupyter notebook environment; convenient but sometimes slower than your own GPU.</li>
-  <li><code>tensor</code>: Multi-dimensional arrays used in ML frameworks like PyTorch and TensorFlow.</li>
-  <li><code>GPU</code>: Graphics Processing Unit, the workhorse of training modern ML models quickly.</li>
-  <li><code>kernel</code>: The unit of work inside a GPU; messing with it is how you accidentally overheat your server.</li>
-  <li><code>pipeline</code>: The end-to-end flow of your ML model; if one step breaks, the whole thing collapses like a Jenga tower.</li>
+<li><strong>APSC 101/160:</strong> First-year engineering (design + intro to C)</li>
+  
+<li><strong>CPEN 211:</strong> Digital Systems — the legendary rite of passage all CPEN students eventually have to face</li>
+  
+<li><strong>System Verilog/RISC-V:</strong> Hardware languages you'll learn (and maybe curse)</li>
+  
+<li><strong>Co-op:</strong> UBC's work program; basically your way of getting internships and work experience. </li>
 </ul>
-
-
-
-<p id="apscclaw" style="font-size:0.9rem; color:#555;">
-  <sup>1</sup>APSC 101 project: we had to create an autonomous mechanical claw from scratch that operated with an Arduino and sensors. It was chaotic, frustrating, and glorious. Shout out Professor Pete Ostafichuk for his screencasts and Group K-9. 
-</p>
-
 
